Update to fix uneccessary horizontal scroll bar

--- a/app/assets/stylesheets/components/_columnar_table_block.scss
+++ b/app/assets/stylesheets/components/_columnar_table_block.scss
@@ -21,6 +21,7 @@
     clear: both;
     margin-bottom: 5px;
     overflow: auto;
+    overflow-x: hidden;
     position: relative;
 
     &:last-child { border-bottom: 0; }
